Allow flight table to fill the screen. Fix icon alignment issue

--- a/styles/flights.css
+++ b/styles/flights.css
@@ -1,9 +1,8 @@
 
 
 form {
-    width: 55%;
+    width: 80%;
     margin: 0 auto;
-    padding: 7%;
     font-family: 'Waiting for the Sunrise', sans-serif; 
 }
 
